--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,5 +10,5 @@
         android:id="@+id/WebView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_centerHorizontal="true"/>
+        android:background="@color/winveer_background"/>
 </RelativeLayout>
